Melting station now use FluidStack as output